libkirke:4a6cd1ba

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@ $(document).ready(function(){initNavTree('about.html',''); initResizable(); });
 <div class="title">About </div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p>This project is a word search puzzle solver. All internal source written by Justin Kirkegaard.</p>
+<div class="textblock"><p>This project provides generic functionality for building C applications.</p>
 <p>This project relies heavily on open source software and tools. Acknowledgements to</p>
 <ul>
 <li>Build system using <a href="https://cmake.org" title="CMake">CMake</a></li>
