--- a/macros_8h.html
+++ b/macros_8h.html
@@ -107,7 +107,7 @@ This graph shows which files directly or indirectly include this file:</div>
 <map name="lib_2kirke_2include_2kirke_2macros_8hdep" id="lib_2kirke_2include_2kirke_2macros_8hdep">
 <area shape="rect" title=" " alt="" coords="175,5,336,47"/>
 <area shape="rect" href="allocator_8h.html" title=" " alt="" coords="5,95,167,136"/>
-<area shape="rect" href="system__allocator_8h_source.html" title=" " alt="" coords="64,184,225,225"/>
+<area shape="rect" href="system__allocator_8h.html" title=" " alt="" coords="64,184,225,225"/>
 <area shape="rect" href="auto__slice_8h.html" title=" " alt="" coords="364,184,525,225"/>
 <area shape="rect" href="math_8h.html" title=" " alt="" coords="293,95,455,136"/>
 <area shape="rect" href="slice_8h.html" title=" " alt="" coords="479,95,640,136"/>
