--- a/allocator_8h.html
+++ b/allocator_8h.html
@@ -117,7 +117,7 @@ This graph shows which files directly or indirectly include this file:</div>
 <div class="center"><img src="allocator_8h__dep__incl.png" border="0" usemap="#lib_2kirke_2include_2kirke_2allocator_8hdep" alt=""/></div>
 <map name="lib_2kirke_2include_2kirke_2allocator_8hdep" id="lib_2kirke_2include_2kirke_2allocator_8hdep">
 <area shape="rect" title=" " alt="" coords="5,5,167,47"/>
-<area shape="rect" href="system__allocator_8h_source.html" title=" " alt="" coords="5,95,167,136"/>
+<area shape="rect" href="system__allocator_8h.html" title=" " alt="" coords="5,95,167,136"/>
 </map>
 </div>
 </div>
